<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.psp_practica3_jaime.Editar"
    android:orientation="vertical"
    android:padding="0dp">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.example.admin.psp_practica3_jaime.Editar"
                android:stretchColumns="0,1"
                android:shrinkColumns="0,1"
                android:layout_margin="0dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/str_actividad"
                        android:id="@+id/textView5"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0"
                        android:layout_margin="5dp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/str_profesor"
                        android:id="@+id/textView6"
                        android:layout_alignBaseline="@+id/spinner"
                        android:layout_alignBottom="@+id/spinner"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_column="0"
                        android:layout_columnWeight="1" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner"
                        android:layout_below="@+id/textView5"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_column="0"
                        android:layout_columnWeight="1" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/str_tipo"
                        android:id="@+id/textView7" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/spinner"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:id="@+id/group">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_complementaria"
                            android:id="@+id/radioButton"
                            android:checked="true" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/str_extraescolar"
                            android:id="@+id/radioButton2"
                            android:checked="false" />
                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/str_descripcion"
                        android:id="@+id/textView9" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/editText5" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/str_lugar"
                        android:id="@+id/textView8" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText"
                        android:layout_weight="1"
                        android:hint="@string/str_lugari" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText2"
                        android:layout_weight="1"
                        android:hint="@string/str_lugarf" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/str_tramo"
                        android:id="@+id/textView10" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText4"
                        android:layout_weight="1"
                        android:hint="@string/str_fechai" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingLeft="1dp"
                    android:paddingRight="1dp"
                    android:paddingBottom="2dp">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/editText3"
                        android:layout_weight="1"
                        android:hint="@string/str_fechaf" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:layout_gravity="bottom">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_aceptar"
                    android:id="@+id/button"
                    android:onClick="aceptar" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_cancelar"
                    android:id="@+id/button2"
                    android:onClick="cancelar" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
